# Recursive_pietro

./: LICENSE  MANIFEST.in  README.md  SPEC.md  pyproject.toml
.github/workflows/: ci.yml
src/recursive_pietro/: __init__.py  _compat.py  _elimination.py  _shap.py  _validation.py
tests/: conftest.py  test_early_stopping.py  test_elimination.py  test_groups.py  test_reproducibility.py  test_shap.py  test_sklearn_compat.py
