[build-system]
requires = ["setuptools>=68.0"]
build-backend = "setuptools.build_meta"

[project]
name = "recursive-pietro"
version = "0.1.0"
requires-python = ">=3.11"
description = "SHAP-based recursive feature elimination with cross-validation and early stopping"
readme = "README.md"
license = "MIT"
authors = [
    { name = "Reinier Koops" },
]
keywords = ["shap", "feature-selection", "feature-elimination", "scikit-learn", "machine-learning"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "Intended Audience :: Science/Research",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Scientific/Engineering",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
    "Operating System :: OS Independent",
    "Typing :: Typed",
]
dependencies = [
    "scikit-learn>=1.3",
    "shap>=0.43",
    "numpy>=1.24",
    "pandas>=2.0",
    "joblib>=1.3",
]

[project.optional-dependencies]
lightgbm = ["lightgbm>=4.0"]
xgboost = ["xgboost>=2.0"]
catboost = ["catboost>=1.2"]
plot = ["matplotlib>=3.7"]
progress = ["tqdm>=4.60"]
all = [
    "recursive-pietro[lightgbm,xgboost,catboost,plot,progress]",
]
dev = [
    "recursive-pietro[all]",
    "pytest>=7.0",
    "pytest-cov",
    "ruff",
    "mypy",
]

[project.urls]
Homepage = "https://github.com/ReinierKoops/Recursive_pietro"
Repository = "https://github.com/ReinierKoops/Recursive_pietro"
Issues = "https://github.com/ReinierKoops/Recursive_pietro/issues"

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-data]
recursive_pietro = ["py.typed"]

[tool.ruff]
line-length = 120
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "W"]

[tool.mypy]
python_version = "3.11"
ignore_missing_imports = true

[tool.pytest.ini_options]
testpaths = ["tests"]
